tests, routes, swagger are redy
