# docs/swagger.yaml
@@ -12,17 +12,7 @@ definitions:
     - price_per_night
     - type
     type: object
-  handler.errorResponse:
-    properties:
-      error:
-        type: string
-    type: object
-  handler.messageResponse:
-    properties:
-      message:
-        type: string
-    type: object
-  model.Guest:
+  dto.FindGuestDTO:
     properties:
       createdAt:
         type: string
@@ -34,40 +24,28 @@ definitions:
         type: string
       phone:
         type: string
-      reservations:
-        items:
-          $ref: '#/definitions/model.Reservation'
-        type: array
       updatedAt:
         type: string
     type: object
-  model.Reservation:
+  dto.FindReservationDTO:
     properties:
       check_in:
         type: string
       check_out:
         type: string
-      createdAt:
-        type: string
       guest:
-        $ref: '#/definitions/model.Guest'
+        $ref: '#/definitions/dto.FindGuestDTO'
       guest_id:
         type: string
       id:
         type: string
-      room:
-        $ref: '#/definitions/model.Room'
       room_id:
         type: string
       total_price:
         type: number
-      updatedAt:
-        type: string
     type: object
-  model.Room:
+  dto.FindRoomDTO:
     properties:
-      createdAt:
-        type: string
       id:
         type: string
       number:
@@ -76,17 +54,53 @@ definitions:
         type: number
       reservations:
         items:
-          $ref: '#/definitions/model.Reservation'
+          $ref: '#/definitions/dto.FindReservationDTO'
         type: array
       type:
         type: string
-      updatedAt:
+    type: object
+  handler.errorResponse:
+    properties:
+      error:
+        type: string
+    type: object
+  handler.messageResponse:
+    properties:
+      message:
         type: string
     type: object
 info:
   contact: {}
 paths:
-  /rooms/all:
+  /room/{id}:
+    get:
+      consumes:
+      - application/json
+      description: find one room by id
+      parameters:
+      - description: room id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.FindRoomDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      tags:
+      - rooms
+  /room/all:
     get:
       consumes:
       - application/json
@@ -98,7 +112,9 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.Room'
+              items:
+                $ref: '#/definitions/dto.FindRoomDTO'
+              type: array
             type: array
         "400":
           description: Bad Request
@@ -106,7 +122,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       tags:
       - rooms
-  /rooms/create:
+  /room/create:
     post:
       consumes:
       - application/json
@@ -127,6 +143,62 @@ paths:
             $ref: '#/definitions/handler.messageResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      tags:
+      - rooms
+  /room/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete room by id
+      parameters:
+      - description: room id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.messageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      tags:
+      - rooms
+  /room/update/{id}:
+    put:
+      consumes:
+      - application/json
+      description: update room by id
+      parameters:
+      - description: room id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.messageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/handler.errorResponse'
       tags:
